# jart-management

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
django-project/: key.txt  manage.py
django-project/jartmanagement/: .env-example  asgi.py  settings.py  urls.py  wsgi.py
django-project/mediaserver/: account_adapter.py  admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
django-project/mediaserver/migrations/: 0001_initial.py  0004_alter_tag_displayname_alter_tag_namespace.py  0007_remove_media_author_tags_media_creator_tags.py  0009_alter_gallery_media_items.py  0010_copy_gallery_dates_to_media.py  0012_embeddedmedia_alter_media_file.py  0014_set_galleries_visible.py
jartmanagement/: .env-example  asgi.py  settings.py  urls.py
mediaserver/: account_adapter.py  admin.py  apps.py  context_processors.py  models.py  sitemaps.py  urls.py  views.py
mediaserver/migrations/: 0002_tag_media_author_tags_media_tags.py  0005_rename_author_media_title.py  0006_tag_tag_count.py  0008_media_uploaded_date.py  0011_alter_tag_options.py  0013_gallery_visible.py  0015_tag_description.py  0016_discordcreator_media_discord_creator.py  0017_alter_discordcreator_tag.py  0018_alter_discordcreator_tag_alter_media_discord_creator.py  0019_sitesettings.py  0020_alter_gallery_options_alter_media_options_and_more.py  0021_gallery_last_updated_media_last_updated_and_more.py
mediaserver/templates/: base.html  tag_thumbnails.html
mediaserver/templatetags/: media_utility.py
static/css/: common.css  holiday.css  index.css
(+36 files in other folders)
