[tool.poetry]
name = "jart-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"
django-allauth = {extras = ["socialaccount"], version = "^65.13.1"}
python-dotenv = "^1.0.1"
psycopg = "^3.3.2"
easy-thumbnails = "^2.10"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"