[project]
name = "jart-management"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "python-dotenv>=1.2.2,<2",
    "psycopg>=3.3.3,<4",
    "easy-thumbnails>=2.10.1,<3",
    "gunicorn>=23.0.0,<24",
    "django>=6.0.4",
    "django-allauth[socialaccount]>=65.16.1",
    "svglib==1.5.1",
]

[tool.uv]
package = false
